# ppc-demo

./: .gitignore  Cargo.toml  README.md  build.rs  commands.gdb  linker.x  powerpc-unknown-none-eabi.json
.cargo/: config.toml
crosstool-ng/: .config
src/: c_library.c  c_library.rs  lib.rs  main.rs
